[package]
name = "IMO"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lab7_test"
path = "src/lab7_test.rs"

[[bin]]
name = "launch_visualization"
path = "src/bin/launch_visualization.rs"

[dependencies]
thiserror = "2.0.12"
regex = "1.10"
lazy_static = "1.4"
rand = "0.9.0"
plotters = "0.3.7"
indicatif = "0.17.7"
